# backend-api/routes/ksRoutes.js
@@ -1,6 +1,7 @@
 const VaccinationController = require("../controllers/VaccinationController")
 const ClientController = require("../controllers/ClientControllers")
 const AppointmentController = require("../controllers/AppointmentController")
+const UsersController = require("../controllers/ClientControllers")
 
 module.exports = (app) => {
     app.route("/vaccination")
@@ -22,4 +23,20 @@ module.exports = (app) => {
         .get(AppointmentController.getById)
         .put(AppointmentController.modifyById)
         .delete(AppointmentController.deleteById);
+
+    app.route("/client")
+    .get(ClientController.getAllClients)
+    .post(ClientController.create)
+    app.route("/client/ClientID")
+    .get(ClientController.getbyID)
+
+    app.route("/auth/:LoginEmail")
+    .get(ClientController.getByEmail)
+    app.route("/sessions")
+    .post(SessionsController.newSession)
+    app.route("/sessions/me")
+    .get(SessionsController.reAuthenticate)
+    app.route("/auth/logout")
+    .get(SessionsController.removeSession)
+
 }
